--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/game-logo.png" />
@@ -7,6 +7,10 @@
     <title>React Tic-Tac-Toe</title>
   </head>
   <body>
+  <header>
+    <img src="/game-logo.png" alt="tic tac toe game board"/>
+    <h1>Tic Tac Toe</h1>
+  </header>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
